--- a/data/conf.yaml
+++ b/data/conf.yaml
@@ -2,4 +2,18 @@ optimizer: Adam
 loss: dice_loss
 metrics: [dice_coeff, binary_accuracy]
 input_shape: [512, 512, 3]
+output_shape: [512, 512, 1]
+base_kernel: 16
+kernel_size: [3, 3]
 
+base_folder: data
+image_folder: images
+mask_folder: masks
+image_type: .jpg
+mask_type: .png
+batch_size: 8
+epochs: 10
+steps: 5000
+validation_split: 0.1
+
+seed: 29673113
