--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,7 @@ repos:
       language: system
       entry: python -m black
       args: [picasso]
+      types: [python]
 
     - id: isort
       name: isort
@@ -14,3 +15,4 @@ repos:
       language: system
       entry: python -m isort
       args: [-rc, picasso]
+      types: [python]
